<resources>
    <string name="app_name">Tezkor</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="chat">Chat</string>
    <string name="calendar">Kalendar</string>
    <string name="tasks">Vazifalar</string>
    <string name="workers">Xodimlar</string>
    <string name="other">Boshqalar</string>
    <string name="quick_idea">Tezkor idealar</string>
    <string name="quick_plan">Tezkor rejalar</string>
    <string name="tooltiptext1">Fikr bildirish</string>
    <string name="tooltiptext2">Mind map</string>
    <string name="tooltiptext3">Papka ochish</string>
    <string name="ab1">"O\'z vaqtida"</string>
    <string name="vaqt1">"5 daqiqa oldin"</string>
    <string name="vaqt2">"10 daqiqa oldin"</string>
    <string name="vaqt3">"15 daqiqa oldin"</string>
    <string name="vaqt4">"30 daqiqa oldin"</string>
    <string name="vaqt5">"1 soat oldin"</string>
    <string name="vaqt6">"2 soat oldin"</string>
    <string name="vaqt7">"3 soat oldin"</string>
    <string name="vaqt8">"5 soat oldin"</string>
    <string name="vaqt9">"10 soat oldin"</string>
    <string name="vaqt10">"1 kun oldin"</string>
    <string name="vaqt11">"2 kun oldin"</string>
    <string name="vaqt12">"1 hafta oldin"</string>
    <string name="participants">Qatnashuvchilar</string>
    <string name="unknown">Noma\'lum</string>
    <string name="lower_team">Jamoangizda lavozimi siznikidan past bo\'lgan xodimlar mavjud emas</string>
    <string name="departments_and_staff">Bo\'limlar va xodimlar mavjud emas</string>
    <string name="select_participants">Ishtirokchilarni tanlang</string>
    <string name="select_image">Rasmni tanlang</string>
    <string name="internet_error">Internet aloqasi mavjud emas</string>
    <string name="registration_error">Ro\'yxatdan o\'tish ma\'lumotlarida xatolik ro\'y berdi</string>
    <string name="payment_error">To\'lov qilinishi lozim. To\'lov ma\'lumotlarida xatolik ro\'y berdi</string>
    <string name="not_found_error">Siz izlayotgan ma\'lumot mavjud emas</string>
    <string name="permission_error">Bu amalni bajarish uchun sizda ruxsat yo\'q. Rahbaringizga murojaat qiling</string>
    <string name="server_error">Serverga so\'rov yuborishda xatolik ro\'y berdi</string>
    <string name="server_error_two">Serverda xatolik yuz berdi</string>
    <string name="unknown_error">Nomalum xatolik ro\'y berdi. Birozdan so\'ng urinib ko\'ring</string>
    <string name="phone_number_error">Telefon raqam yoki parol noto\'g\'ri</string>
    <string name="company_error">Kompaniyani aktivlashtiring. Administrator bilan bog\'laning</string>
    <string name="employe_limit_error">Xodimlar limiti tugadi. Yangi paket sotib oling.</string>
    <string name="error_error">Xatolik ro\'y berdi. Birozdan so\'ng urinib ko\'ring</string>
    <string name="sucsess_sucsess">Muvaffaqiyatli bajarildi</string>
    <string name="downloading">Yuklanmoqda</string>
    <string name="employe_status_changed">Xodim holati o\'zgartirildi</string>
    <string name="file_uploaded">Fayl yuklandi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="click_for_creating_chat">Yangi chat yaratish uchun ustiga bosing</string>
    <string name="projects">Proyektlar</string>
    <string name="functional">Funksional</string>
    <string name="counseles">Majlislar</string>
    <string name="meetings">Uchrashuvlar</string>
    <string name="tactic_plan">Taktik reja</string>
    <string name="pass_to_profile">Profilga o\'tish</string>
    <string name="search">Qidirish</string>
    <string name="create_purpose">Maqsadlar Xaritasi</string>
    <string name="usefull_kpi">Samaradorlik(KPI)</string>
    <string name="dashboard">Dashboard</string>
    <string name="disk">Disk</string>
    <string name="settings">Sozlamalar</string>
    <string name="refer_and_complaint">Taklif va shikoyatlar</string>
    <string name="how_can_we_help">Qo\'llab quvvatlash</string>
    <string name="todo">TODO</string>
    <string name="capacity_building">Imkoniyatlarni yuksaltirish</string>
    <string name="version_name">© Tezkor v1.0</string>
    <string name="command">Jamoa</string>
    <string name="structure">Tuzilma</string>
    <string name="list">Ro\'yhat</string>
    <string name="outsource">Outsource</string>
    <string name="current_data">Fevral 2021</string>
    <string name="du">DU</string>
    <string name="se">SE</string>
    <string name="ch">CH</string>
    <string name="pa">PA</string>
    <string name="ju">JU</string>
    <string name="sh">SH</string>
    <string name="ya">YA</string>
    <string name="saved">Saqlanganlar</string>
    <string name="role">Boshqaruv</string>
    <string name="business_holder">Biznes egasi</string>
    <string name="ibrahim_gulyamov">Ibrahim Gulyamov</string>
    <string name="director">Direktor</string>
    <string name="hide_all">Barchasini yopish</string>
    <string name="show_all">Barchasini ochish</string>
    <string name="all_day">Kun bo\'yi</string>
    <string name="offer_and_complaint">Taklif va shikoyatlar</string>
    <string name="no_offer_and_complaint">Taklif va shikoyatlar mavjud emas</string>
    <string name="post_offer">Taklif qoldirish</string>
    <string name="complaint">Shikoyat bildirish</string>
    <string name="complaint_">Shikoyat</string>
    <string name="post_complaint">Shikoyat qoldirish</string>
    <string name="complaint_for">Kimning ustidan shikoyat:</string>
    <string name="noone_selected">Hech kim tanlanmagan</string>
    <string name="enter_complaint_content">Shikoyat mazmunini kiriting</string>
    <string name="who_notified">Kim xdabardor bo\'lishi kerak:</string>
    <string name="files">Fayllar</string>
    <string name="complaint_content">Shikoyat mazmuni</string>
    <string name="offer_for">Kim uchun taklif:</string>
    <string name="offer_to_company">Kompaniyaga taklif</string>
    <string name="offer_content">Taklif mazmuni</string>
    <string name="enter_offer_content">Taklif mazmunini kiriting</string>
    <string name="send_offer">Taklifni yuborish</string>
    <string name="send_complaint">Shikoyatni yuborish</string>
    <string name="resolve_complaint">Shikoyatni xal qilish</string>
    <string name="complaint_for_comany">Kompaniya ustidan shikoyat</string>
    <string name="chatDesc">4 ta a\'zolar bor</string>
    <string name="chatName">My Team</string>
    <string name="login">Tizimga kirish</string>
    <string name="phone_number">Telefon raqam</string>
    <string name="enter_password">Parolni tering</string>
    <string name="enter_username">Ism Familiya kiriting</string>
    <string name="password_not_confirm">Parol teng emas</string>
    <string name="invalid_phone_number">Telefon raqam noto\'g\'ri formatda</string>
    <string name="invalid_sms_code">SMS kod noto\'g\'ri formatda</string>
    <string name="no_connection">Telefon raqam noto\'g\'ri formatda</string>
    <string name="add_section">Bo\'lim qo\'shish</string>
    <string name="parent_section">Ota bo\'lim</string>
    <string name="add">Qo\'shish</string>
    <string name="add_position">Lavozim qo\'shish</string>
    <string name="section_name">Bo\'lim nomi</string>
    <string name="enter_name">Nomini kiriting</string>
    <string name="created">Yaratildi</string>
    <string name="ended">Tugadi</string>
    <string name="boshlandi">boshlandi</string>
    <string name="yangilandi">yangilandi</string>
    <string name="position_name">Lavozim nomi</string>
    <string name="add_officer">Xodim qo\'shish</string>
    <string name="create_password">Parol yaratish</string>
    <string name="fields_empty">Maydonlar bo\'sh</string>
    <string name="birthday">Tug\'ilgan sana</string>
    <string name="add_project">Proyekt yaratish</string>
    <string name="project_name">Proyekt nomi</string>
    <string name="project_times">Proyekt muddatlari:</string>
    <string name="begining_time">Boshlanish vaqti:</string>
    <string name="ending_time">Tugatish vaqti:</string>
    <string name="dd_mm_yyyy">kk.oo.yyyy</string>
    <string name="ready">Tayyor</string>
    <string name="enter_message_content">Xabar matnini yozing...</string>
    <string name="positions">Lavozimlar</string>
    <string name="sections">Bo\'limlar</string>
    <string name="note_title">Eslatma</string>
    <string name="hint_project_name">Proyekt nomi</string>
    <string name="hint_annotation">Izohni yozing</string>
    <string name="hint_yaqm">YaQM kiriting</string>
    <string name="add_task">Vazifa ochish</string>
    <string name="hint_add_task">Vazifa nomi</string>
    <string name="save">Saqlash</string>
    <string name="hint_performer">Ijrochi:</string>
    <string name="hint_performer_2">Ijrochi</string>
    <string name="tv_master">Rahbar:</string>
    <string name="tv_master_2">Rahbar</string>
    <string name="goalsTitle">Maqsad qo`yish</string>
    <string name="create_task">Vazifa ochish</string>
    <string name="selected_performer">Ijrochi tanlang</string>
    <string name="master_performer">Rahbarni tanlang</string>
    <string name="taklif">Taklif</string>
    <string name="example_splash_screen">Example Splash Screen</string>
    <string-array name="quick_plans">
        <item>Kunlik</item>
        <item>Hafta</item>
        <item>Oylik</item>
        <item>Yillik</item>
    </string-array>
    <string-array name="spinner_array">
        <item>Oylik</item>
        <item>Hafta</item>
        <item>Kunlik</item>
    </string-array>
    <string-array name="months_name">
        <item>Yan</item>
        <item>Fev</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Iyn</item>
        <item>Iyl</item>
        <item>Avg</item>
        <item>Sen</item>
        <item>Okt</item>
        <item>Noy</item>
        <item>Dek</item>
    </string-array>
    <string-array name="tab_in_task">
        <item>Funksional</item>
        <item>Proyektlar</item>
        <item>Taktik reja</item>
    </string-array>
    <string-array name="tab_in_meeting">
        <item>Majlislar</item>
        <item>Uchrashuvlar</item>
    </string-array>
    <string-array name="tab_in_perfomer">
        <item>Jamoa</item>
        <item>Ro\'yxat</item>
        <item>Tuzilma</item>
        <item>Outsource</item>
    </string-array>
    <string name="add_worker">Xodim qo\'shish</string>
    <string name="offers">Takliflar</string>
    <string name="complaints">Shikoyatlar</string>
    <string name="january">Yanvar</string>
    <string name="february">Fevral</string>
    <string name="march">Mart</string>
    <string name="april">Aprel</string>
    <string name="may">May</string>
    <string name="june">Iyun</string>
    <string name="july">Iyul</string>
    <string name="august">Avgust</string>
    <string name="september">Sentyabr</string>
    <string name="october">Oktyabr</string>
    <string name="november">Noyabr</string>
    <string name="december">Dekabr</string>
    <string name="enter_sms_code">Tasdiqlash kodini kiriting</string>
    <string name="confirm">Tasdiqlash</string>
    <string name="resend_code">Kod tasdiqlash  02:59</string>
    <string name="error_message">Ushbu sahifa dasturlash jarayonida</string>
    <string name="once">Bir marta</string>
    <string name="every_month">Har oy</string>
    <string name="every_day">Har kuni</string>
    <string name="every_week">Har hafta</string>
    <string name="every_year">Har yili</string>
    <string name="message2_in_repairing">Iltimos boshqa sahifaga kirib ko\'ring</string>
    <string name="meeting">Majlis</string>
    <string name="day">Kunlik</string>
    <string name="week">Haftalik</string>
    <string name="monthly">Oylik</string>
    <string name="yearly">Yillik</string>
</resources>