<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add"
        style="@style/FabButtonStyle"
        android:layout_margin="@dimen/size_20dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:tint="@null" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/btn_add_offers"
        style="@style/TextSmallAddButtonTextStyle"
        android:text="@string/offers"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_complaints"
        app:layout_constraintEnd_toEndOf="@+id/btn_add"
        tools:visibility="visible" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/btn_add_complaints"
        style="@style/TextSmallAddButtonTextStyle"
        android:text="@string/complaints"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btn_add"
        app:layout_constraintEnd_toEndOf="@+id/btn_add"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>